--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
-
 {
-  "name": "gd-multiplayer-server",
-  "version": "1.0.0",
+  "name": "GdevelopServer",
+  "version": "0.0.1",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "sweko",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.1"
+    "@types/node": "^22.13.11",
+    "express": "^5.1.0",
+    "socket.io": "^4.8.1"
   }
 }
