--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "type": "commonjs",
   "dependencies": { 
     "socket.io": "^4.8.1"
+  },
+  "scripts": {
+    "test": "echo \"No tests defined\""
   }
 }
