--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.1",
   "description": "My first Gdevelop 5 server",
   "type": "commonjs",
-  "dependencies": { 
+  "dependencies": {
     "socket.io": "^4.8.1"
   },
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"No tests defined\""
   }
 }
